      GM to give a faction custom-made units, or to give existing units of
      that faction various skills or items (or to take them away).  It also
      allows the GM to force some orders to be executed by specific units.
   -- Added a new itemflag NOMARKET, which prevents an item from ever showing
      up in a city market (either wanted or for sale).
   -- Added code to allow magic items into the markets on world creation.  All
      magic items currently are NOMARKET, so there will by default be no
      change.
   -- Moved some items from NORMAL to ADVANCED (lance and pike) and moved
      some items from MAGIC to ADVANCED (and added NOMARKET) (admantium items,
      improved mithril armor, super bows).
   -- Modified Axes from having Hammers boost their production to having
      Axes boost their production by default.  This makes them consistant with
      other items made from wood rather than being the exception.
   -- Added (disabled) resource enhancing buildings for all resources that
      didn't yet have one.

Changes from 4.0.7 -> 4.0.8
--------------------------------------------------
   -- Added the BUILD HELP <unit> syntax to allow two units to collaborate
      on creating an object even during the first turn it is being built.
   -- Added BUY ALL and SELL ALL commands.  SELL ALL will attempt to sell
      all of an item that you can.  BUY ALL will attempt to buy as many of
      an item as you can.
   -- Modified the 'Item:' players.in command to give the unit information
      about the new item they own if they haven't already seen it.
   -- Fixed a bug in setting a unit as MAGE when given skills via the GM
      option.
   -- Fixed a bug where the game editor could give out disabled items.
   -- Fixed a bug in the game editor to mark a unit as having owned an item.
   -- Fixed a bug in the save code which caused items to be shown every turn
      instead of just the first turn