@@ -24,18 +24,19 @@
 // END A3HEADER
 #include "shields.h"
 
-Shield * ShieldList::GetHighShield(int type) {
-  Shield * hi = 0;
-  forlist(this) {
-    Shield * sh = (Shield *) elem;
-    if (sh->shieldtype == type) {
-      if (!hi) {
-	hi = sh;
-      } else {
-	if (sh->shieldskill > hi->shieldskill)
-	  hi = sh;
-      }
-    }
-  }
-  return hi;
+Shield * ShieldList::GetHighShield(int type)
+{
+	Shield * hi = 0;
+	forlist(this) {
+		Shield * sh = (Shield *) elem;
+		if (sh->shieldtype == type) {
+			if (!hi) {
+				hi = sh;
+			} else {
+				if (sh->shieldskill > hi->shieldskill)
+					hi = sh;
+			}
+		}
+	}
+	return hi;
 }
